<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/expandableButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="expandableButton1"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/q1"
            android:elevation="@dimen/_4sdp"
            android:textColor="@color/colorWhite" />
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton1"
            android:background="@color/colorTransparent"
            android:padding="@dimen/_10sdp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <include layout="@layout/layout_help_1"/>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/expandableButton2"
            android:layout_below="@+id/expandableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="expandableButton2"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/q2"
            android:elevation="@dimen/_4sdp"
            android:textColor="@color/colorWhite" />
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton2"
            android:background="@color/colorTransparent"
            android:padding="@dimen/_10sdp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <include layout="@layout/layout_help_2"/>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/expandableButton3"
            android:layout_below="@+id/expandableLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="expandableButton3"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/q3"
            android:elevation="@dimen/_4sdp"
            android:textColor="@color/colorWhite" />
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton3"
            android:background="@color/colorTransparent"
            android:padding="@dimen/_10sdp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <include layout="@layout/layout_help_3"/>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/expandableButton4"
            android:layout_below="@+id/expandableLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="expandableButton4"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/q4"
            android:elevation="@dimen/_4sdp"
            android:textColor="@color/colorWhite" />
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton4"
            android:background="@color/colorTransparent"
            android:padding="@dimen/_10sdp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <include layout="@layout/layout_help_4"/>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/expandableButton5"
            android:layout_below="@+id/expandableLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="expandableButton5"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/q5"
            android:elevation="@dimen/_4sdp"
            android:textColor="@color/colorWhite" />
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton5"
            android:background="@color/colorTransparent"
            android:padding="@dimen/_10sdp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <include layout="@layout/layout_help_5"/>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/expandableButton6"
            android:layout_below="@+id/expandableLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="expandableButton6"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/q6"
            android:elevation="@dimen/_4sdp"
            android:textColor="@color/colorWhite" />
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton6"
            android:background="@color/colorTransparent"
            android:padding="@dimen/_10sdp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <include layout="@layout/layout_help_6"/>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


        <Button
            android:id="@+id/expandableButton7"
            android:layout_below="@+id/expandableLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:onClick="expandableButton7"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/q7"
            android:elevation="@dimen/_4sdp"
            android:textColor="@color/colorWhite" />
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton7"
            android:background="@color/colorTransparent"
            android:padding="@dimen/_10sdp"
            app:ael_duration="400"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <include layout="@layout/layout_help_7"/>
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
    </RelativeLayout>
</ScrollView>